Workaroundeja ja fiksejä rekisteröitymiseen ja kirjautumiseen, lähinnä taistelua iOS:n virtuaalinäppiksen kanssa.

--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -1,14 +1,14 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block header %}
-	<div class="headerButton" style="width: 80px; display: inline-block;">
+	<div class="headerButton" style="width: 80px; display: inline-block; text-shadow: 0 1px 2px #000; padding-left: 6px">
 		<a href="../login" style="text-decoration: none; color: #eee; font-weight: 400">
 			<i class="fa fa-chevron-left chevron"></i>
 			Takaisin
 		</a>
 	</div>
 	
-	<div class="headerTitle" style="min-width: 200px; display: inline-block; text-align: center;">
+	<div class="headerTitle" style="min-width: 200px; display: inline-block; text-align: center;  text-shadow: 0 1px 2px #000">
 		<span>Rekisteröityminen</span>
 	</div>
 	
