--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block header %}
-	<h4 style="text-align: center; color: #eee; text-shadow: 0 1px 2px #000">Kirjaudu Bogikorttiin</h4>
+	<div class="headerTitle" style="text-align: center; color: #eee; text-shadow: 0 1px 2px #000">Kirjaudu Bogikorttiin</div>
 {% endblock %}
 
 
