--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -16,20 +16,41 @@
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0, minimal-ui" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	</head>
-
-	<body>
-		<div class="ui-mobile-viewport" style="position: absolute; bottom:0;top:0;left:0;right:0">
-			<div style="height: 44px; width: 100%; margin-top: 6px !important" class="header" data-theme="b" data-role="content">
-				{% block header %}
-			
-				{% endblock header %}
 		
-			</div>
-			<div class="scrollOuter">
+		
+		<script type="text/javascript">
+			$(document).on('pageinit', function() {
+			
+				if(window.navigator.standalone) 
+					document.body.style.webkitTransform = 'translate3d(0, 20px, 0)';
+			
+				$('input').bind('focusout', function() {
+					setTimeout(function() {
+						if(window.navigator.standalone == true) {
+							$('.root').addClass('ios_top');
+						}
+						else if (navigator.userAgent.match(/(iPhone)/g) && window.navigator.standalone == false) {
+							$('.root').addClass('ios_top_minimal_ui');
+						}
+					}, 10);
+				});			
+			});
+		</script>		
+	</head>
+	
+	<body>
+		<div id="login" class="root" data-role="page" style="background: transparent">
+			<div class="scrollOuter" style="top: 0">
 				<div class="scrollMiddle">
 					<div class="scrollInner">
-						<div data-role="content" data-theme="b" style="background: transparent !important">
+						<div style="height: 44px; width: 100%; background: rgba(0,0,0,0.25) !important" class="header headerTitle" data-theme="b">
+							{% block header %}
+			
+							{% endblock header %}
+		
+						</div>
+					
+						<div data-role="content" data-theme="b" style="background: transparent !important; margin-top: 44px !important">
 							<!-- <div>
 								{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 									{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -57,6 +78,11 @@
 					</div>
 				</div>
 			</div>
+			
+			<div style="height: 24px">
+			
+			</div>
+			
 		</div>
    </body>
 </html>
