Puolen pikselin viivoja retina-näytöille, http://atirip.com/2013/09/22/yes-we-can-do-fraction-of-a-pixel/

--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -1148,7 +1148,7 @@ background-size: 5px 5px;
 
 .listViewRow {
 	width: 100%;
-	border-top: 1px solid #ccc;
+//	border-top: 1px solid #ccc;
 	background: #fefefe;
 	height: 36px;
 	display: table;
@@ -1169,6 +1169,10 @@ background-size: 5px 5px;
 	vertical-align: middle;
 }
 
+.hairline-border {
+	border-top: 1px solid #bbb;
+	-webkit-transform: scaleY(0.5);
+}
 
 
 #scoreCardButtons {
